changed song of the day

--- a/index.html
+++ b/index.html
@@ -50,7 +50,4 @@ with heroin. Who doesn't want that?</p>
   <source src="bluemonday.mp3" type="audio/mpeg">
 </audio>
 
-<p> It's just a question of time!<p>
-<p>And it's running out for you.<p>
-
-<p>This won't be the first time Depeche Mode is featured as the artist of the song of the day! So get used to it.<p>
+<p>I see a ship in the harbor! I can and shall obey!<p>
