--- a/index.html
+++ b/index.html
@@ -51,3 +51,5 @@ with heroin. Who doesn't want that?</p>
 </audio>
 
 <p>I see a ship in the harbor! I can and shall obey!<p>
+
+<a href="quotebook.html">Read the quotebook!</a>
