--- a/index.html
+++ b/index.html
@@ -52,4 +52,4 @@ with heroin. Who doesn't want that?</p>
 
 <p>I see a ship in the harbor! I can and shall obey!<p>
 
-<a href="quotebook.html">Read the quotebook!</a>
+<p><a href="quotebook.html">Read the quotebook!</a></p>
