--- a/quotebook.html
+++ b/quotebook.html
@@ -5,6 +5,8 @@ body {
   background-image: url('brick9.png');
 }
 </style>
+  
+ <h1>Shit.. That change of scenery didn't quite work correctly, I'll try it again later.<h1>
 
 <h1>Welcome to the quotebook! You deserve a change of scenery.<h1>
 
