--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@ with heroin. Who doesn't want that?</p>
 <p>I see a ship in the harbor! I can and shall obey!<p>
 
 <p><a href="quotebook.html">Read the quotebook!</a></p>
-
-<p><a href="doomtest.html">A shitty test of JSDOS</a></p>
+  
+<p>App coming soon for IOS and Android! an APK download should be here later tonight.<p>
