--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ with heroin. Who doesn't want that?</p>
 
 <p><a href="quotebook.html">Read the quotebook!</a></p>
   
+ 
+<p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
+  
 <a href="psychoticfriendsnetwork.apk" download>
   <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
 </a>
