--- a/funnyjokes.html
+++ b/funnyjokes.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Jokes I'd get fucking tased for</title>
-</head>
-<body>
+<style>
+body {
+  background-image: url('GRAY2.png');
+}
+</style>
 
 <h1>Wanna hear some jokes I'd get FUCKING TASED for because they're just that funny?!</h1>
 
@@ -21,4 +22,3 @@
 
 </body>
 </html>
-
