--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ with heroin. Who doesn't want that?</p>
  
 <p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
   
+<p><a href="fireblu.html">FIREBLU!</a></p>
+  
 <a href="psychoticfriendsnetwork.apk" download>
   <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
 </a>
