--- a/fireblu.html
+++ b/fireblu.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
+<style>
+body {
+  background-image: url('fireblu.png');
+}
+</style>
 
 <p style="color:red;">I am red</p>
 <p style="color:blue;">I am blue</p>
