--- a/funnyshit.html
+++ b/funnyshit.html
@@ -19,6 +19,8 @@ body {
 <p>You see how hard it is to not scream "AW PISS!" After someone tackles you!<p>
 
 <p>THE FOCKING BASS IS FOCKING ROW! (Why would I say it so much if I didn't think it was fucking hilarious?)<p>
+  
+<p>Y'know, one time I just held a casual conversation with someone whilst I was fucking torturing them with a knife!<p>
 
 </body>
 </html>
