--- a/mixtape.html
+++ b/mixtape.html
@@ -29,6 +29,11 @@ body {
   <source src="bluemonday.mp3" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
+  
+<audio controls>
+  <source src="getthebalanceright.mp3" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
 
 </body>
 </html>
