--- a/mixtape.html
+++ b/mixtape.html
@@ -25,15 +25,48 @@ body {
                 
 </pre>
   
+<p>New Order - Blue Monday<p>  
+  
 <audio controls>
   <source src="bluemonday.mp3" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
+
+<p>Depeche Mode - Get The Balance Right!<p> 
   
 <audio controls>
   <source src="getthebalanceright.mp3" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
+  
+<p>Rammstein - Reise Reise<p>  
 
+<audio controls>
+  <source src="reisereise.mp3" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+
+<p>Hall & Oates - Out Of Touch<p>  
+  
+<audio controls>
+  <source src="outoftouch.mp3" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+
+<p>Joy Division - Transmission<p>  
+  
+<audio controls>
+  <source src="transmission.mp3" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+  
+<p>3D (A Fish In Sea) - Some Die For Money<p>
+  
+<audio controls>
+  <source src="somedieformoney.mp3" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+  
+  
 </body>
 </html>
