--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ with heroin. Who doesn't want that?</p>
 <p><a href="quotebook.html">Read the quotebook!</a></p>
   
 
-<p><a href="vinyl.html">Bloxy's Mixtape</a></p>
+<p><a href="mixtape.html">Bloxy's Mixtape</a></p>
   
  
 <p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
