--- a/index.html
+++ b/index.html
@@ -57,3 +57,4 @@ with heroin. Who doesn't want that?</p>
   <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
 </a>
 
+<p>Psychotic Friends Network Half-Life Server: 192.168.0.2:27015<p>
