--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ with heroin. Who doesn't want that?</p>
  
 <p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
   
+<p><a href="vinyl.html">Vinyl rips</a></p>
+  
 <p><a href="fireblu.html">FIREBLU!</a></p>
   
 <a href="psychoticfriendsnetwork.apk" download>
