--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ with heroin. Who doesn't want that?</p>
  
 <p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
   
-<p><a href="vinyl.html">Vinyl rips</a></p>
+<p><a href="cassette.html">Doom II on a cassette tape</a></p>
   
 <p><a href="fireblu.html">FIREBLU!</a></p>
   
