--- a/cassette.html
+++ b/cassette.html
@@ -14,7 +14,7 @@ body {
   
 
 <audio controls>
-  <source src="d2cassette.wav" type="audio/pcm">
+  <source src="d2cassette.ogg" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
 
