--- a/cassette.html
+++ b/cassette.html
@@ -17,6 +17,8 @@ body {
   <source src="d2cassette.ogg" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
+  
+<a href="d2cassette.wav">If that didn't work because of OGG compression, here's an uncompressed WAV.</a>
 
 
 
