--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ with heroin. Who doesn't want that?</p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
   
+
+<p><a href="reisereise.html">Reise Reise Lyrics</a></p>
+  
  
 <p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
   
@@ -59,4 +62,3 @@ with heroin. Who doesn't want that?</p>
   <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
 </a>
 
-<p>Psychotic Friends Network Half-Life Server: 192.168.0.2:27015<p>
