--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ with heroin. Who doesn't want that?</p>
 
 <p><a href="reisereise.html">Reise Reise Lyrics</a></p>
 
-<p><a href="xash.html">Half-Life in your browser! (made by Mittorn)</a></p>
+<p><a href="/xash">Half-Life in your browser! (made by Mittorn)</a></p>
  
 <p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
   
