--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@ body {
   background-image: url('flickerylight.gif');
 }
 </style>
+  
+<h1>Home of the messiest HTML file structure since roblox.com!<h1>
 
 <p>Update 1.4! Now the lights flicker! Spoopy! Now it looks more like a late 90's website than a mid 90's website!<p>
 <p>(But still feels like it could pass for a mid-90's website made by a genius or some shit.)<p>
 <p>If the website is slow, it's because it's hosting a shitton of music, images, and a fucking Half Life server<p>
 
-<h1>The others say it smells like teen spirit. I say it smells like the '90s.<h1>
 
 <h1>Best viewed in any resolution! Fuck resolution and fuck the democracy!<h1>
 
@@ -51,7 +52,6 @@ with heroin. Who doesn't want that?</p>
 
 <p><a href="reisereise.html">Reise Reise Lyrics</a></p>
 
-<p><a href="/xash">Half-Life in your browser! (made by Mittorn)</a></p>
  
 <p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
   
