--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ with heroin. Who doesn't want that?</p>
 <h1>I'm sorry but all the other dumbasses are surprisingly too busy sleeping at 11PM to write their own bios.<h1>
 
 <p><a href="quotebook.html">Read the quotebook!</a></p>
-  
+
+
+<p><a href="benzin.swf">Rare Rammstein Promotional Game - Benzin</a></p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
   
