--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ with heroin. Who doesn't want that?</p>
 <p><a href="quotebook.html">Read the quotebook!</a></p>
 
 
-<p><a href="benzin.swf">Rare Rammstein Promotional Game - Benzin</a></p>
+<p><a href="benzin.html">Rare Rammstein Promotional Game - Benzin</a></p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
   
