--- a/mixtape.html
+++ b/mixtape.html
@@ -67,6 +67,31 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio>
   
+<p>Danzig - Mother<p>
+<audio controls>
+<source src="mother.mp3" type="audio/ogg">
+  
+<p>Faith No More - Midlife Crisisr<p>
+<audio controls>
+<source src="midlifecrisis.mp3" type="audio/ogg">
+  
+<p>Human League - Love Action (I Believe In Love)<p>
+<audio controls>
+<source src="loveactionibelieveinlove.mp3" type="audio/ogg">  
+Your browser does not support the audio element.
+</audio>
+  
+<p>Living Colour - Cult Of Personality<p>
+<audio controls>
+<source src="cultofpersonality.mp3" type="audio/ogg">
+  
+<p>L7 - Pretend We're Dead<p>
+<audio controls>
+<source src="pretendweredead.mp3" type="audio/ogg">
+  
+<p>Rage Against The Machine - Killing In The Name<p>
+<audio controls>
+<source src="killinginthename.mp3" type="audio/ogg">
   
 </body>
 </html>
