--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ with heroin. Who doesn't want that?</p>
 
 <p><a href="benzin.swf">Rare Rammstein Promotional Game - Benzin</a></p>
   
-<p><a href="fnaf2.apk">FNAF 2 APK (So I can download it on a school chromebook and play it)</a></p>
-<p><a href="FiveNightsAtFreddy's2.exe">FNAF 2 EXE (So I can download it on a school PC and play it)</a></p>
+  
+<p><a href="https://drive.google.com/drive/folders/14fvE74drpB3v4nBWYSQGo7Rkv5a8ufWC">FNAF 2 (So I can download it on a school PC and play it)</a></p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
   
