--- a/index.html
+++ b/index.html
@@ -17,32 +17,8 @@ body {
 
 <h1>Psychotic Friends Network</h1>
 
-<p>Psychotic Friends Network is a club of lunatics. Join us if your a fucking idiot.<p>
+<p>Psychotic Friends Network is a club of lunatics.<p>
 
-<p>Our members include....<p>
-<p>Queen Amadeus The First! Everyone must simp for her.<p>
-<p>Alex "Motherfucker", You can't hate her no matter how hard you try.<p>
-<p>Icy Thot, the disappointment, whatever the fuck she goes by.<p>
-<p>Pengu, He's probably proud  of me for fucking the shit out of democracy.<p>
-<p>Bloxy, the person I'm referring to when I say "I" or "Me", I'm the guy that gave this shithole life.<p>
-<p>Micah, can't forget him. He's not interesting in any specific ways, but he's definitely fun to talk to!<p>
-<p>Painbringer, the edgelord and the 2nd most likely person to know how to do this clunky HTML shit, besides me.<p>
-<p>Yipper, the one that told an 8 year old that "faggot" is a compliment you should tell gay people.<p> 
-<p>And, finally, Chopter. A small child that likes Minecraft and knows alot about atoms or some shit, I wasn't paying attention.<p>
-
-<p>Bloxy's Bio</p>
-
-<p>I wear clothes. Until my queen tells me not to, than, she ties me up and we fuck the shit out of eachother.
-I indulge in her tight twat and beg for more as she moans in pleasure as my massive cock fucks her.
-Alright, enough of the horny erotica. I like Doom and that's all you need to know. Any more, and you will be
-mentally scarred beyond repair, imagine having 3 people's deep, fucked up emotional baggage, dumped onto you,
-all at once, yea, I wouldn't want that either. So, now that I've scared half the readers away within the first
-sentence, how 'ya do?<p>
-
-<p>Oh and you can't forget my oddly specific addiction to water from the Colorado river, what can I say? Shit's good and it's laced
-with heroin. Who doesn't want that?</p>
-
-<h1>I'm sorry but all the other dumbasses are surprisingly too busy sleeping at 11PM to write their own bios.<h1>
 
 <p><a href="quotebook.html">Read the quotebook!</a></p>
 
@@ -50,15 +26,13 @@ with heroin. Who doesn't want that?</p>
 <p><a href="benzin.swf">Rare Rammstein Promotional Game - Benzin</a></p>
   
   
-<p><a href="https://drive.google.com/drive/folders/14fvE74drpB3v4nBWYSQGo7Rkv5a8ufWC">FNAF 2 (So I can download it on a school PC and play it)</a></p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
   
 
 <p><a href="reisereise.html">Reise Reise Lyrics</a></p>
 
- 
-<p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
+
   
 <p><a href="cassette.html">Doom II on a cassette tape</a></p>
   
