--- a/quotebook.html
+++ b/quotebook.html
@@ -17,11 +17,5 @@ body {
 <p style="color:red;">"I dismembered the doll".</p>
 <p>-Rammy<p>
 
-<p>"Story in a game is like story in a porn movie."<p>
+<p>"The speed of light sucks."<p>
 <p>-John Carmack<p>
-
-<p>"Come near me and your penis will be gone!"<p>
-<p>-Bee (Whoever the fuck that is..)<p>
-
-<p>"When your horny and you don't have a girlfriend, tree.<p>
-<p>-Queen Amadeus The First (If only my cock was that tree..)<p>
