--- a/quotebook.html
+++ b/quotebook.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html>
-<style>
-body {
-  background-image: url('BRICK9.png');
-}
-</style>
- 
 <h1>Welcome to the quotebook! You deserve a change of scenery.<h1>
-
-<p>"Anyone who has never made a mistake has never tried anything new"<p>
-<p>-Albert Einstein<p>
-
-<p>"That's not soup it's stupid!"<p>
-<p>-Bloxy<p>
-
 <p style="color:red;">"I dismembered the doll".</p>
 <p>-Rammy<p>
 
+<p>"Story in a game is like story in a porn movie."<p>
 <p>"The speed of light sucks."<p>
 <p>-John Carmack<p>
+
+<p>"Come near me and your penis will be gone!"<p>
+<p>-Bee (Whoever the fuck that is..)<p>
+
+<p>"When your horny and you don't have a girlfriend, tree.<p>
+<p>-Queen Amadeus The First (If only my cock was that tree..)<p>
