--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<h1>Please read! The website is undergoing many changes right now that may seem unusual and out of character for me to do. Don't worry, it'll all pass. TLDR, I dun goof'd.<h1>
+<!DOCTYPE html>
+<html>
+<style>
+body {
+  background-image: url('flickerylight.gif');
+}
+</style>
+  
+<h1>Home of the messiest HTML file structure since roblox.com!<h1>
+
+<p>Update 1.4! Now the lights flicker! Spoopy! Now it looks more like a late 90's website than a mid 90's website!<p>
+<p>(But still feels like it could pass for a mid-90's website made by a genius or some shit.)<p>
+<p>If the website is slow, it's because it's hosting a shitton of music, images, and a fucking Half Life server<p>
+
+
+<h1>Best viewed in any resolution! Fuck resolution and fuck the democracy!<h1>
 
 <h1>Psychotic Friends Network</h1>
 
 <p>Psychotic Friends Network is a club of lunatics. Join us if your a fucking idiot.<p>
-<p>Psychotic Friends Network is a club of lunatics.<p>
 
 <p>Our members include....<p>
 <p>Queen Amadeus The First! Everyone must simp for her.<p>
@@ -34,15 +48,22 @@ with heroin. Who doesn't want that?</p>
 
 
 <p><a href="benzin.swf">Rare Rammstein Promotional Game - Benzin</a></p>
-
-
-<p><a href="https://drive.google.com/drive/folders/14fvE74drpB3v4nBWYSQGo7Rkv5a8ufWC">FNAF 2 (So I can download it on a school PC and play it)</a></p>
+  
+  
+<p><a href="fnaf.html">CTF Test</a></p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
-
+  
 
 <p><a href="reisereise.html">Reise Reise Lyrics</a></p>
 
-
-
+ 
+<p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
+  
 <p><a href="cassette.html">Doom II on a cassette tape</a></p>
+  
+<p><a href="fireblu.html">FIREBLU!</a></p>
+  
+<a href="psychoticfriendsnetwork.apk" download>
+  <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
+</a>
