--- a/index.html
+++ b/index.html
@@ -67,3 +67,5 @@ with heroin. Who doesn't want that?</p>
 <a href="psychoticfriendsnetwork.apk" download>
   <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
 </a>
+
+<p><a href="mail.html">Mail!</a></p>
