--- a/mail.html
+++ b/mail.html
@@ -101,7 +101,7 @@ Moskau
 
 <pre>
 
-<p>(No, I didn't use Moskau because of that Ukraine shit going on. I used it because it's a genuinely good song, even without context.)
+<p>(No, I didn't use Moskau because of that Ukraine shit going on. I used it because it's a genuinely good song, even without context.)<p>
 
 </body>
 </html>
