--- a/index.html
+++ b/index.html
@@ -50,22 +50,21 @@ with heroin. Who doesn't want that?</p>
 <p><a href="benzin.swf">Rare Rammstein Promotional Game - Benzin</a></p>
   
   
-<p><a href="fnaf.html">CTF Test</a></p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
   
 
 <p><a href="reisereise.html">Reise Reise Lyrics</a></p>
-
- 
-<p><a href="funnyshit.html">Jokes so funny I'd let someone fucking taze me for them</a></p>
   
 <p><a href="cassette.html">Doom II on a cassette tape</a></p>
   
 <p><a href="fireblu.html">FIREBLU!</a></p>
   
+<p><a href="mail.html">Mail!</a></p>
+
+<p><a href="wikihome.html">Psychotic Friends Network Wiki</a></p>
+  
 <a href="psychoticfriendsnetwork.apk" download>
   <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
 </a>
 
-<p><a href="mail.html">Mail!</a></p>
