--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
+<title>PFN Homepage</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
 body {
   background-image: url('flickerylight.gif');
 }
 </style>
-  
+
+
 <h1>Home of the messiest HTML file structure since roblox.com!<h1>
 
 <p>Update 1.4! Now the lights flicker! Spoopy! Now it looks more like a late 90's website than a mid 90's website!<p>
 <p>(But still feels like it could pass for a mid-90's website made by a genius or some shit.)<p>
-<p>If the website is slow, it's because it's hosting a shitton of music, images, and a fucking Half Life server<p>
+<p>Best viewed with netscape navigator<p>
 
 
 <h1>Best viewed in any resolution! Fuck resolution and fuck the democracy!<h1>
@@ -44,25 +47,26 @@ with heroin. Who doesn't want that?</p>
 
 <h1>I'm sorry but all the other dumbasses are surprisingly too busy sleeping at 11PM to write their own bios.<h1>
 
-<p><a href="quotebook.html">Read the quotebook!</a></p>
 
 
 <p><a href="benzin.swf">Rare Rammstein Promotional Game - Benzin</a></p>
   
-  
+<p><a href="wad.html">Doom WADs</a></p>
 
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
+
+<p><a href="files.html">PFN File Server</a></p>
   
+<p><a href="chat.html">Psychotic-Chat (I formally request you don't E-Fuck people here...)</a></p>
 
 <p><a href="reisereise.html">Reise Reise Lyrics</a></p>
+
+<p><a href="xash/xash-intro.html">Xash3D Emscripten Port Mirror</a></p>
   
-<p><a href="cassette.html">Doom II on a cassette tape</a></p>
-  
+
 <p><a href="fireblu.html">FIREBLU!</a></p>
   
 <p><a href="mail.html">Mail!</a></p>
-  
-<a href="psychoticfriendsnetwork.apk" download>
-  <img src="downloadbutton.png" alt="PFN App" width="104" height="142">
-</a>
 
+<p>Unauthorized reproduction in whole or in part is strictly prohibited.<p>
+  
