--- a/mail.html
+++ b/mail.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <head>
+<title>E-Mails</title>
 <style>
 body {
   background-image: url('DEM1_5.png');
