--- a/mixtape.html
+++ b/mixtape.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <head>
+<title>The Mixtape</title>
 <style>
 body {
   background-image: url('CRATE1.png');
@@ -25,7 +27,7 @@ body {
                 
 </pre>
   
-<p>New Order - Blue Monday<p>  
+<p>New Order - Blue Monday (It's an essential, what'd you expect from ME of all people?!)<p>  
   
 <audio controls>
   <source src="bluemonday.mp3" type="audio/ogg">
@@ -39,10 +41,10 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio>
   
-<p>Rammstein - Reise Reise<p>  
+<p>Rammstein - Dalai Lama<p>  
 
 <audio controls>
-  <source src="reisereise.mp3" type="audio/ogg">
+  <source src="dalailama.mp3" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
 
