--- a/reisereise.html
+++ b/reisereise.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<title>rEiSe ReIsE sEeMaNn ReIsE</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <body style="background-color:black;">
 
 <pre  style="color:red;">
