Erased profanity, because I'm a good boy.

--- a/index.html
+++ b/index.html
@@ -11,41 +11,37 @@ body {
 
 <h1>Home of the messiest HTML file structure since roblox.com!<h1>
 
-<p>Update 1.4! Now the lights flicker! Spoopy! Now it looks more like a late 90's website than a mid 90's website!<p>
-<p>(But still feels like it could pass for a mid-90's website made by a genius or some shit.)<p>
 <p>Best viewed with netscape navigator<p>
 
 
-<h1>Best viewed in any resolution! Fuck resolution and fuck the democracy!<h1>
+<h1>Best viewed in any resolution!<h1>
 
 <h1>Psychotic Friends Network</h1>
 
-<p>Psychotic Friends Network is a club of lunatics. Join us if your a fucking idiot.<p>
+<p>Psychotic Friends Network is a club of lunatics. Join us if your an idiot.<p>
 
 <p>Our members include....<p>
-<p>Queen Amadeus The First! Everyone must simp for her.<p>
-<p>Alex "Motherfucker", You can't hate her no matter how hard you try.<p>
-<p>Icy Thot, the disappointment, whatever the fuck she goes by.<p>
-<p>Pengu, He's probably proud  of me for fucking the shit out of democracy.<p>
-<p>Bloxy, the person I'm referring to when I say "I" or "Me", I'm the guy that gave this shithole life.<p>
-<p>Micah, can't forget him. He's not interesting in any specific ways, but he's definitely fun to talk to!<p>
-<p>Painbringer, the edgelord and the 2nd most likely person to know how to do this clunky HTML shit, besides me.<p>
-<p>Yipper, the one that told an 8 year old that "faggot" is a compliment you should tell gay people.<p> 
-<p>And, finally, Chopter. A small child that likes Minecraft and knows alot about atoms or some shit, I wasn't paying attention.<p>
-
+<p>Amadeus<p>
+<p>Alex<p>
+<p>Pengu<p>
+<p>Bloxy<p>
+<p>Micah<p>
+<p>Painbringer<p>
+<p>Chopter<p>
+<p>Birby<p> 
+  
+  
 <p>Bloxy's Bio</p>
 
-<p>I wear clothes. Until my queen tells me not to, than, she ties me up and we fuck the shit out of eachother.
-I indulge in her tight twat and beg for more as she moans in pleasure as my massive cock fucks her.
-Alright, enough of the horny erotica. I like Doom and that's all you need to know. Any more, and you will be
-mentally scarred beyond repair, imagine having 3 people's deep, fucked up emotional baggage, dumped onto you,
+<p>I like Doom and that's all you need to know. Any more, and you will be
+mentally scarred beyond repair, imagine having 3 people's deep emotional baggage, dumped onto you,
 all at once, yea, I wouldn't want that either. So, now that I've scared half the readers away within the first
 sentence, how 'ya do?<p>
 
-<p>Oh and you can't forget my oddly specific addiction to water from the Colorado river, what can I say? Shit's good and it's laced
+<p>Oh and you can't forget my oddly specific addiction to water from the Colorado river, what can I say? It's good and it's laced
 with heroin. Who doesn't want that?</p>
 
-<h1>I'm sorry but all the other dumbasses are surprisingly too busy sleeping at 11PM to write their own bios.<h1>
+<h1>I'm sorry but everyone else is surprisingly too busy sleeping at 11PM to write their own bios.<h1>
 
 
 
@@ -56,8 +52,6 @@ with heroin. Who doesn't want that?</p>
 <p><a href="mixtape.html">Bloxy's Mixtape</a></p>
 
 <p><a href="files.html">PFN File Server</a></p>
-  
-<p><a href="chat.html">Psychotic-Chat (I formally request you don't E-Fuck people here...)</a></p>
 
 <p><a href="reisereise.html">Reise Reise Lyrics</a></p>
 
@@ -67,6 +61,3 @@ with heroin. Who doesn't want that?</p>
 <p><a href="fireblu.html">FIREBLU!</a></p>
   
 <p><a href="mail.html">Mail!</a></p>
-
-<p>Unauthorized reproduction in whole or in part is strictly prohibited.<p>
-  
